--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -740,20 +740,20 @@ Banner Style
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 220px 20% 320px 20%;
+  padding: 200px 20% 250px 20%;
   margin-top: 0px;
 }
 
 .main-banner .item-1 {
-  background-image: url(../images/banner-01.jpg);
+  background-image: url(../images/GA2.jpg);
 }
 
 .main-banner .item-2 {
-  background-image: url(../images/banner-02.jpg);
+  background-image: url(../images/Ls.jpg);
 }
 
 .main-banner .item-3 {
-  background-image: url(../images/banner-03.jpg);
+  background-image: url(../images/NS.jpg);
 }
 
 .main-banner .item span.category {
@@ -1153,7 +1153,7 @@ Properties Style
 */
 
 .properties .item {
-  background-color: #fafafa;
+  background-color: #e6e4e4;
   border-radius: 10px;
   padding: 30px;
   margin-bottom: 30px;
@@ -1222,16 +1222,16 @@ Contact Style
 */
 
 .contact {
-  background-image: url(../images/contact-bg.jpg);
+  background-image: url(../images/benaras.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  padding: 100px 0px 250px 0px;
+  padding: 250px 0px 250px 0px;
   position: relative;
 }
 
 .contact .section-heading h2 {
-  color: #fff;
+  color: #ffffff;
 }
 
 .contact-content {
